hotfix: fix overlap at media 800px

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,7 +6,7 @@
   max-width: 880px;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 900px) {
   .footer__author {
     padding-left: 19px;
   }
