--- a/blocks/places/__grid/places__grid.css
+++ b/blocks/places/__grid/places__grid.css
@@ -10,6 +10,7 @@
 @media screen and (max-width: 920px) {
   .places__grid {
     grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px 0;
     justify-items: center;
   }
 }
