--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -28,7 +28,7 @@
   outline: none;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 900px) {
   .profile__add-button {
     position: inherit;
     transform: none;
