--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -4,7 +4,7 @@
   flex-direction: row;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 900px) {
   .profile__container {
     max-width: 282px;
     width: 100%;
