--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -21,7 +21,7 @@
 }
 
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 900px) {
   .profile__edit-button {
     margin-left:10px;
     margin-bottom: 4px;
