--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,7 +2,7 @@
   padding-left: 30px;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 900px) {
   .profile__info {
     width: 100%;
     padding: 0;
