--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -8,7 +8,7 @@
 }
 
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 900px) {
   .profile__job {
     text-align: center;
     margin-bottom: 36px;
