--- a/blocks/profile/__name-container/profile__name-container.css
+++ b/blocks/profile/__name-container/profile__name-container.css
@@ -4,7 +4,7 @@
   max-width: 530px;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 900px) {
   .profile__name-container {
     position: relative;
     padding: 0;
