--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -8,7 +8,7 @@
   overflow: hidden;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 900px) {
   .profile__name {
     font-size: 22px;
     line-height: 26.63px;
